--- a/.github/workflows/preprod-build.yml
+++ b/.github/workflows/preprod-build.yml
@@ -1,10 +1,10 @@
-name: CI/CD PROD Ludo-mobile - BUILD
+name: CI/CD PREPROD Ludo-mobile - BUILD
 
 on:
   push:
-    branches: [main]
+    branches: [preprod]
   pull_request:
-    branches: [main]
+    branches: [preprod]
 jobs:
   build_web:
     name: build_web
@@ -17,6 +17,7 @@ jobs:
       - run: flutter pub get
       - run: flutter test
       - run: flutter build web
+
   build_apk:
     name: build_apk
     needs: build_web
@@ -34,6 +35,7 @@ jobs:
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
+
   build_ios:
     name: build_ios
     needs: build_apk
