--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -23,10 +23,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@main
+      - uses: actions/setup-java@v2
         with:
           distribution: "zulu"
-          java-version: "11"
+          java-version: "15"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.3.9"
