--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -25,11 +25,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
         with:
-          distribution: "zulu"
-          java-version: "15"
+          distribution: 'zulu'
+          java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.9"
+          flutter-version: '3.3.9'
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
