--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   injectable: 1.4.0
   flutter_dotenv: 5.0.2
   form_field_validator: 1.1.0
+  responsive_framework: 0.1.6
 
 dev_dependencies:
   flutter_test:
