--- a/.github/workflows/preprod-build.yml
+++ b/.github/workflows/preprod-build.yml
@@ -17,7 +17,7 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
-      - run: flutter build web
+      - run: flutter build web --dart-define=API_URL=https://api-preprod.ludo-mobile.com
 
   build_apk:
     name: build_apk
@@ -36,7 +36,7 @@ jobs:
       - run: flutter pub run build_runner build
       - run: flutter test
       - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build appbundle --dart-define=API_URL=https://api-preprod.ludo-mobile.com
 
   build_ios:
     name: build_ios
@@ -51,4 +51,4 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
-      - run: flutter build ios --release --no-codesign
+      - run: flutter build ios --release --no-codesign --dart-define=API_URL=https://api-preprod.ludo-mobile.com
