--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -16,7 +16,7 @@ jobs:
           flutter-version: "3.3.9"
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build web
+      - run: flutter build web --dart-define=API_URL=https://api.ludo-mobile.com
   build_apk:
     name: build_apk
     needs: build_web
@@ -33,7 +33,7 @@ jobs:
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build appbundle --dart-define=API_URL=https://api.ludo-mobile.com
   build_ios:
     name: build_ios
     needs: build_apk
@@ -46,4 +46,4 @@ jobs:
           architecture: x64
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build ios --release --no-codesign
+      - run: flutter build ios --release --no-codesign --dart-define=API_URL=https://api.ludo-mobile.com
