--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           flutter-version: "3.3.9"
       - run: flutter pub get
+      - run: flutter pub run build_runner build
       - run: flutter test
       - run: flutter build web --dart-define=API_URL=https://api.ludo-mobile.com
 
@@ -32,6 +33,7 @@ jobs:
         with:
           flutter-version: '3.3.9'
       - run: flutter pub get
+      - run: flutter pub run build_runner build
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle --dart-define=API_URL=https://api.ludo-mobile.com
@@ -47,5 +49,6 @@ jobs:
           flutter-version: '3.3.9'
           architecture: x64
       - run: flutter pub get
+      - run: flutter pub run build_runner build
       - run: flutter test
       - run: flutter build ios --release --no-codesign --dart-define=API_URL=https://api.ludo-mobile.com
