--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,16 @@ dependencies:
     sdk: flutter
   cupertino_icons: 1.0.2
   http: 0.13.2
+  image_picker: ^0.8.7+3
   flutter_bloc: 7.0.1
   shared_preferences: 2.0.0
   get_it: 7.0.0
   injectable: 1.4.0
   form_field_validator: 1.1.0
   responsive_framework: 0.1.6
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
