--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,21 @@ dependencies:
   image_picker: ^0.8.7+3
   flutter_bloc: 7.0.1
   shared_preferences: 2.0.0
-  get_it: 7.0.0
-  injectable: 1.4.0
+  get_it: 7.2.0
+  injectable: 2.1.0
   form_field_validator: 1.1.0
   responsive_framework: 0.1.6
   flutter_localizations:
     sdk: flutter
   intl: any
+  go_router: 3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 2.0.0
-  build_runner: 2.2.0
-  injectable_generator: 1.4.0
+  build_runner: 2.3.3
+  injectable_generator: 2.1.0
 
 # The following section is specific to Flutter packages.
 flutter:
