--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -17,7 +17,7 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
-      - run: flutter build web --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com/
+      - run: flutter build web --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
 
   build_apk:
     name: build_apk
@@ -36,7 +36,7 @@ jobs:
       - run: flutter pub run build_runner build
       - run: flutter test
       - run: flutter build apk
-      - run: flutter build appbundle --dart-define=API_URL=https://api.ludo-mobile.com
+      - run: flutter build appbundle --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
 
   build_ios:
     name: build_ios
@@ -51,4 +51,4 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
-      - run: flutter build ios --release --no-codesign --dart-define=API_URL=https://api.ludo-mobile.com
+      - run: flutter build ios --release --no-codesign --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
