--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: ludo_mobile
-description: A new Flutter project.
+description: La Ludosaure, application de location de jeux de société
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 99.99.99+99
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -35,29 +35,24 @@ dev_dependencies:
   flutter_lints: 2.0.0
   build_runner: 2.3.3
   injectable_generator: 2.1.0
+  flutter_launcher_icons: ^0.12.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/ludosaure_icn.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/ludosaure_icn.png"
+    background_color: "#ffffff"
+  windows:
+    generate: true
+    image_path: "assets/ludosaure_icn.png"
+    background_color: "#ffffff"
 
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   assets:
     - assets/
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
