--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -12,17 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Fetch all history for all tags and branches
-      - run: git config remote.origin.url https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Ludosaure/Ludo-mobile
-      - run: git fetch --prune --depth=10000
-
+        run: |
+          git config remote.origin.url https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
+          git fetch --prune --depth=10000
       - name: Install GitVersion
-          uses: gittools/actions/gitversion/setup@v0.9.3
-          with:
-            versionSpec: '5.x'
-      - name: Install GitVersion
-          uses: gittools/actions/gitversion/setup@v0.9.3
-          with:
-            versionSpec: '5.x'
+        uses: gittools/actions/gitversion/setup@v0.9.3
+        with:
+          versionSpec: '5.x'
       - name: Use GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.3
@@ -66,18 +62,17 @@ jobs:
           name: gitversion
       - name: Create new file without newline char from version.txt
         run: tr -d '\n' < version.txt > version1.txt
-        - name: Read version
-          id: version
-          uses: juliangruber/read-file-action@v1
-          with:
-            path: version1.txt
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
       - name: Update version in YAML
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       - name: Update KeyStore password in gradle properties
         run: sed -i 's/#{KEYSTORE_PASS}#/${{ secrets.STORE_PASSWORD }}/g' android/key.properties
       - name: Update KeyStore key password in gradle properties
         run: sed -i 's/#{KEYSTORE_KEY_PASS}#/${{ secrets.KEY_PASSWORD }}/g' android/key.properties
-
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
@@ -96,23 +91,23 @@ jobs:
           name: appbundle
           path: build/app/outputs/bundle/release/app-release.aab
 
-  release:
-    name: Release app to internal track
-    needs: [ build_apk ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Get appbundle from artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: appbundle
-      - name: Release app to internal track
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_ACCOUNT_KEY }}
-          packageName: com.fluttercicddemo
-          releaseFile: app-release.aab
-          track: internal
+#  release:
+#    name: Release app to internal track
+#    needs: [ build_apk ]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Get appbundle from artifacts
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: appbundle
+#      - name: Release app to internal track
+#        uses: r0adkll/upload-google-play@v1
+#        with:
+#          serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_ACCOUNT_KEY }}
+#          packageName: com.fluttercicddemo
+#          releaseFile: app-release.aab
+#          track: internal
 
   build_ios:
     name: build_ios
