--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,8 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     compileSdkVersion 33
-    ndkVersion flutter.ndkVersion
+    ndkVersion "25.2.9519653"
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
