--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Fetch all history for all tags and branches
         run: |
           git config remote.origin.url https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
-          git fetch --prune --depth=10000
+          git fetch --unshallow
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
@@ -111,7 +111,7 @@ jobs:
           releaseFiles: app-release.aab
           track: internal
           whatsNewDirectory: android/release-notes/
-          status: draft # TODO potentiellement à changer quand l'app sera validée
+          status: completed
 
   build_ios:
     name: build_ios
