--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -3,8 +3,7 @@ name: CI/CD PROD Ludo-mobile - BUILD
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+
 jobs:
   version:
     name: Create version number
@@ -32,7 +31,6 @@ jobs:
 
   build_web:
     name: build_web
-    needs: [ release ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -109,21 +107,22 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_ACCOUNT_KEY }}
           packageName: com.ludosaure.ludo_mobile
           releaseFiles: app-release.aab
-          track: internal
+          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
+          track: production
           whatsNewDirectory: android/release-notes/
           status: completed
 
-  build_ios:
-    name: build_ios
-    needs: [ release ]
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.3.9'
-          architecture: x64
-      - run: flutter pub get
-      - run: flutter pub run build_runner build
-      - run: flutter test
-      - run: flutter build ios --release --no-codesign --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
+#  build_ios:
+#    name: build_ios
+#    needs: [ release ]
+#    runs-on: macos-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: subosito/flutter-action@v2
+#        with:
+#          flutter-version: '3.3.9'
+#          architecture: x64
+#      - run: flutter pub get
+#      - run: flutter pub run build_runner build
+#      - run: flutter test
+#      - run: flutter build ios --release --no-codesign --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
