--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Fetch all history for all tags and branches
         run: |
           git config remote.origin.url https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
-          git fetch --unshallow
+          git fetch --unshallow --prune
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
@@ -84,7 +84,7 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - run: flutter test
-      - run: flutter build apk --release --split-per-abi --build-number=${{ steps.version.outputs.content }}
+      - run: flutter build apk --release --split-per-abi # --build-number=${{ steps.version.outputs.content }} 0.1.0
       - run: flutter build appbundle --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
       - name: Upload app bundle
         uses: actions/upload-artifact@v3
