--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,9 @@ description: La Ludosaure, application de location de jeux de société
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-version: 1.0.1+9
+# version: 1.0.1 -> nom de la version : on s'en fiche
+# version: +2023060500 -> code de version : la date du jour
+version: 1.0.1+20230605
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
