--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   flutter_rating_bar: ^4.0.1
   easy_localization: ^3.0.2
+  date_range_form_field: ^1.0.2
 
 dev_dependencies:
   flutter_test:
