--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   easy_localization: ^3.0.2
   date_range_form_field: ^1.0.2
+  flutter_stripe: ^9.2.1
 
 dev_dependencies:
   flutter_test:
