--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
     sdk: flutter
   intl: any
   go_router: 3.0.0
-  font_awesome_flutter: ^10.4.0
-  flutter_rating_bar: ^4.0.1
-  easy_localization: ^3.0.2
-  date_range_form_field: ^1.0.2
-  flutter_stripe: ^9.2.1
+  font_awesome_flutter: 10.4.0
+  flutter_rating_bar: 4.0.1
+  easy_localization: 3.0.2
+  flutter_stripe: 9.2.1
+  flutter_date_pickers: 0.4.1
 
 dev_dependencies:
   flutter_test:
