--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,13 @@ dependencies:
     sdk: flutter
   intl: any
   go_router: 3.0.0
-  font_awesome_flutter: 10.4.0
-  flutter_rating_bar: 4.0.1
-  easy_localization: 3.0.2
+  font_awesome_flutter: ^10.4.0
+  flutter_rating_bar: ^4.0.1
+  easy_localization: ^3.0.2
+  firebase_auth: ^4.6.2
+  firebase_core: ^2.13.1
+  cloud_firestore: ^4.8.0
+  flutter_dotenv: ^5.1.0
   flutter_stripe: 9.2.1
   flutter_date_pickers: 0.4.1
 
@@ -61,3 +65,4 @@ flutter:
   assets:
     - assets/images/
     - assets/translations/
+    - .env
