--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -10,6 +10,14 @@ jobs:
     needs: [ release ]
     runs-on: ubuntu-latest
     steps:
+      - name: Create .env file
+          run: |
+            cat > assets/.env <<EOF
+            API_KEY=${{ secrets.API_KEY }}
+            API_ID=${{ secrets.API_ID }}
+            MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}
+            PROJECT_ID=${{ secrets.PROJECT_ID }}
+            EOF
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
@@ -23,6 +31,14 @@ jobs:
     name: build_apk
     runs-on: ubuntu-latest
     steps:
+      - name: Create .env file
+          run: |
+            cat > assets/.env <<EOF
+            API_KEY=${{ secrets.API_KEY }}
+            API_ID=${{ secrets.API_ID }}
+            MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}
+            PROJECT_ID=${{ secrets.PROJECT_ID }}
+            EOF
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
