--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -12,12 +12,10 @@ jobs:
     steps:
       - name: Create .env file
           run: |
-            cat > assets/.env <<EOF
-            API_KEY=${{ secrets.API_KEY }}
-            API_ID=${{ secrets.API_ID }}
-            MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}
-            PROJECT_ID=${{ secrets.PROJECT_ID }}
-            EOF
+            echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+            echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+            echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+            echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
@@ -33,12 +31,10 @@ jobs:
     steps:
       - name: Create .env file
           run: |
-            cat > assets/.env <<EOF
-            API_KEY=${{ secrets.API_KEY }}
-            API_ID=${{ secrets.API_ID }}
-            MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}
-            PROJECT_ID=${{ secrets.PROJECT_ID }}
-            EOF
+            echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+            echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+            echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+            echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
