--- a/.github/workflows/production-test.yml
+++ b/.github/workflows/production-test.yml
@@ -8,10 +8,23 @@ jobs:
     name: run tests
     runs-on: ubuntu-latest
     steps:
+      - name: Create .env file
+          run: |
+            echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+            echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+            echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+            echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.3.9"
       - run: flutter pub get
       - run: flutter pub run build_runner build
-      - run: flutter test
+      - name: Test package
+               run: flutter test
+               env:
+                 API_KEY: ${{ secrets.API_KEY }}
+                 API_ID: ${{ secrets.API_ID }}
+                 MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+                 PROJECT_ID: ${{ secrets.PROJECT_ID }}
+                 EXEC_ENV: 'github_actions'
