--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create .env file
-          run: |
-            echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
-            echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
-            echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
-            echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
+        run: |
+          echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+          echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+          echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+          echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
@@ -23,13 +23,13 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - name: Test package
-          run: flutter test
-          env:
-            API_KEY: ${{ secrets.API_KEY }}
-            API_ID: ${{ secrets.API_ID }}
-            MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
-            PROJECT_ID: ${{ secrets.PROJECT_ID }}
-            EXEC_ENV: 'github_actions'
+        run: flutter test
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+          API_ID: ${{ secrets.API_ID }}
+          MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          EXEC_ENV: 'github_actions'
       - run: flutter build web --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
 
   build_apk:
@@ -37,11 +37,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create .env file
-          run: |
-            echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
-            echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
-            echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
-            echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
+        run: |
+          echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+          echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+          echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+          echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -56,22 +56,22 @@ jobs:
         with:
           fileName: 'upload-keystore.jks'
           encodedString: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-      - name: Create key.properties
+      - name: Create .env file
         run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+          echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
+          echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
+          echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
+          echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
       - run: flutter pub get
       - run: flutter pub run build_runner build
       - name: Test package
-          run: flutter test
-          env:
-            API_KEY: ${{ secrets.API_KEY }}
-            API_ID: ${{ secrets.API_ID }}
-            MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
-            PROJECT_ID: ${{ secrets.PROJECT_ID }}
-            EXEC_ENV: 'github_actions'
+        run: flutter test
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+          API_ID: ${{ secrets.API_ID }}
+          MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          EXEC_ENV: 'github_actions'
       - run: flutter build apk --release --split-per-abi
       - run: flutter build appbundle --dart-define=API_URL=http://api-ludosaure-load-balancer-2124171361.eu-west-1.elb.amazonaws.com
       - name: Upload app bundle
