--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Create .env file
         run: |
+          mkdir -p assets
           echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
           echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
           echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
@@ -31,6 +32,7 @@ jobs:
       - name: Create .env file
         # Voir si c'est possible de faire un job create_dotenv et dont chaque build (ios, apk, web) dépend
         run: |
+          mkdir -p assets
           echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
           echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
           echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
