--- a/.github/workflows/production-build-release.yml
+++ b/.github/workflows/production-build-release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create .env file
+        # Voir si c'est possible de faire un job create_dotenv et dont chaque build (ios, apk, web) dépend
         run: |
           mkdir -p assets
           echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
@@ -29,14 +30,12 @@ jobs:
     name: build_apk
     runs-on: ubuntu-latest
     steps:
-      - name: Create .env file
-        # Voir si c'est possible de faire un job create_dotenv et dont chaque build (ios, apk, web) dépend
+      - name: Create key.properties
         run: |
-          mkdir -p assets
-          echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
-          echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
-          echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
-          echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> assets/.env
+          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -53,6 +52,7 @@ jobs:
           encodedString: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
       - name: Create .env file
         run: |
+          mkdir -p assets
           echo "API_KEY=${{ secrets.API_KEY }}" >> assets/.env
           echo "API_ID=${{ secrets.API_ID }}" >> assets/.env
           echo "MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }}" >> assets/.env
