--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_stripe: 9.2.1
   flutter_date_pickers: 0.4.1
+  path_provider: ^2.0.15
+  universal_html: ^2.2.2
 
 dev_dependencies:
   flutter_test:
