--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.15
   universal_html: ^2.2.2
   rxdart: ^0.27.7
+  badges: ^3.1.1
 
 dev_dependencies:
   flutter_test:
