--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   universal_html: ^2.2.2
   rxdart: ^0.27.7
   badges: ^3.1.1
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
