--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   rxdart: ^0.27.7
   badges: ^3.1.1
   table_calendar: ^3.0.8
+  flutter_local_notifications: ^14.1.1
+  firebase_messaging: ^14.6.4
 
 dev_dependencies:
   flutter_test:
