--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # version: 1.0.1 -> nom de la version : on s'en fiche
 # version: +2023060500 -> code de version : la date du jour
 # Pour l'upload à la main changer le numéro de version dans local.properties
-version: 1.0.2+20230701
+version: 1.0.2+20230704
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -45,6 +45,7 @@ dependencies:
   table_calendar: ^3.0.8
   flutter_local_notifications: ^14.1.1
   firebase_messaging: ^14.6.4
+  permission_handler: ^10.4.1
 
 dev_dependencies:
   flutter_test:
